--- a/public/styles.css
+++ b/public/styles.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background-color: #313338;
+    background-color: #0f0f0f;
 }
 
 /* KEY FRAMES */
@@ -46,7 +46,7 @@ body {
 .topBar {
     display: flex;
     justify-content: space-between;
-    background-color: #212121;
+    background-color: #0f0f0f;
     padding: 1px;
     margin: 0%;
 }
@@ -73,21 +73,14 @@ body {
     animation: spin 2s linear infinite;
 }
 
-.spacer {
-    width: 2px;
-    height: 30px;
-    background-color: #e8d4f6;
-    border: none;
-    margin: 25px -5px;
-    margin-left: -20px;
-}
-
 .syncUp {
     color: #FFFFFF;
     font-family: sans-serif;
     font-size: 40px;
     padding: 0;
     margin: auto;
+    margin-top: 5px;
+    margin-left: -20px;
 }
 
 .account {
@@ -95,7 +88,7 @@ body {
     height: 55px;
     margin-right: 10px;
     flex-shrink: 0;
-    margin-top: 10px;
+    margin-top: 3px;
     transition: transform 0.3s ease
 }
 
@@ -178,6 +171,7 @@ body {
 
 /* Video Preview / Box */
 .videoBox {
+    position: relative;
     background-color: #212121;
     color: white;
     width: 1324px;
@@ -190,6 +184,16 @@ body {
     margin-left: auto;
     margin-right: auto;
     animation: fade-up 0.5s 0.4s backwards;
+}
+
+.iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    border: none;
 }
 
 /* Footer */
