--- a/public/styles.css
+++ b/public/styles.css
@@ -93,6 +93,9 @@ body {
 }
 
 .newRoom {
+    display: inline-block;
+    position: relative;
+    left: 2%;
     background-color: #00ffbb;
     border: none;
     border-radius: 10px;
@@ -100,12 +103,10 @@ body {
     padding: 5px 20px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
     font-size: 20px;
     font-family: sans-serif;
     font-weight: bold;
     flex-shrink: 0;
-    gap: 10px;
     cursor: pointer;
     transition: transform 0.3s ease
 }
@@ -206,24 +207,50 @@ body {
     color: #333;
 }
 
-/* Video Preview / Box */
+/* * Video Section */
+.videoContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+    max-width: 1280px;
+    min-width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .videoBox {
     position: relative;
     background-color: #212121;
     color: white;
-    width: 50%;
-    max-width: 1280px;
-    min-width: 400px;
+    width: 100%;
     aspect-ratio: 16 / 9;
     font-family: sans-serif;
     display: flex;
     align-items: center;
     justify-content: center;
     margin-top: 20px;
-    margin-left: auto;
-    margin-right: auto;
     animation: fade-up 0.5s 0.4s backwards;
 }
+
+.videoTitle {
+    width: 100%;
+    animation: fade-up 0.5s 1s backwards;
+    margin-top: 10px;
+}
+
+.videoTitleText {
+    color: white;
+    margin: 0;
+    padding-left: 0%;
+
+    font-family: sans-serif;
+    font-size: 23px;
+    
+    font-style: italic;
+
+}
+
 
 .iframe {
     position: absolute;
