--- a/public/styles.css
+++ b/public/styles.css
@@ -4,6 +4,7 @@ body {
     padding: 0;
     font-family: sans-serif;
     background-color: #0f0f0f;
+    overflow-x: hidden;
 }
 
 /* KEY FRAMES */
@@ -246,7 +247,6 @@ body {
 
     font-family: sans-serif;
     font-size: 23px;
-    
     font-style: italic;
 
 }
