--- a/public/styles.css
+++ b/public/styles.css
@@ -4,7 +4,6 @@ body {
     padding: 0;
     font-family: sans-serif;
     background-color: #0f0f0f;
-    overflow-x: hidden;
 }
 
 /* KEY FRAMES */
@@ -96,7 +95,7 @@ body {
 .newRoom {
     display: inline-block;
     position: relative;
-    left: 2%;
+    left: 1%;
     background-color: #00ffbb;
     border: none;
     border-radius: 10px;
@@ -134,7 +133,7 @@ body {
     margin: 0px;
     width: 100%;
     height: 2px;
-    background-color: #EBD3F8;
+    background-color: #ffffff;
     border: none;
 }
 
@@ -146,8 +145,7 @@ body {
     margin-top: 75px;
     margin-left: auto;
     margin-right: auto;
-    width: 35vw;
-    max-width: 800px;
+    width: 100%;
     padding: 0 20px;
     box-sizing: border-box;
     animation: fade-up 0.5s 0.4s backwards;
@@ -155,11 +153,14 @@ body {
 
 .searchContainer {
     display: flex;
-    flex-grow: 1;
     align-items: center;
     background-color: #EBD3F8;
     height: 58px;
     border-radius: 0 15px 15px 0;
+    width: 30%;
+    min-width: 50px;
+    max-width: 600px;
+    transition: width 0.3s ease-in-out;
 }
 
 .dropDown {
@@ -169,7 +170,7 @@ body {
     border-radius: 15px 0 0 15px;
     display: flex;
     align-items: center;
-    flex-shrink: 0; /* Prevent shrinking */
+    flex-shrink: 0;
 }
 
 .dropArrow {
@@ -198,7 +199,7 @@ body {
 }
 
 .searchBar {
-    flex: 1;
+    flex-grow: 1;
     height: 100%;
     border: none;
     outline: none;
@@ -206,6 +207,7 @@ body {
     padding-left: 10px;
     font-size: 16px;
     color: #333;
+    min-width: 0;
 }
 
 /* * Video Section */
@@ -250,7 +252,6 @@ body {
     font-style: italic;
 
 }
-
 
 .iframe {
     position: absolute;
