--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,6 @@
 /* Main Body */
 body {
+    overflow-x: hidden;
     margin: 0;
     padding: 0;
     font-family: sans-serif;
@@ -46,21 +47,27 @@ body {
 .topBar {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     background-color: #0f0f0f;
-    padding: 1px;
+    padding: 0px;
     margin: 0%;
+    overflow: hidden;
+    width: 100%;
 }
 
 .leftGroup {
     display: flex;
     align-items: center;
     gap: 25px;
+    flex-shrink: 0;
+    min-width: 0px;
 }
 
 .rightGroup {
     display: flex;
     align-items: center;
     gap: 25px;
+    margin-left: auto;
 }
 
 .logo {
@@ -82,7 +89,7 @@ body {
 
 .syncUp {
     color: #FFFFFF;
-    width: 153px;
+    width: auto;
     height: 47px;
     font-family: sans-serif;
     font-size: 40px;
@@ -90,12 +97,13 @@ body {
     margin: auto;
     margin-top: 6px;
     margin-left: -20px;
+    white-space: nowrap;
+    flex-shrink: 1;
 }
-
 .newRoom {
     display: inline-block;
     position: relative;
-    left: 1%;
+    left: 0.5%;
     background-color: #00ffbb;
     border: none;
     border-radius: 10px;
@@ -135,6 +143,8 @@ body {
     height: 2px;
     background-color: #ffffff;
     border: none;
+    box-sizing: border-box;
+    flex-shrink: 0;
 }
 
 /* Search Section */
@@ -158,7 +168,7 @@ body {
     height: 58px;
     border-radius: 0 15px 15px 0;
     width: 30%;
-    min-width: 50px;
+    min-width: 150px;
     max-width: 600px;
     transition: width 0.3s ease-in-out;
 }
@@ -215,9 +225,9 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 50%;
+    width: 70%;
     max-width: 1280px;
-    min-width: 400px;
+    min-width: 350px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -250,7 +260,6 @@ body {
     font-family: sans-serif;
     font-size: 23px;
     font-style: italic;
-
 }
 
 .iframe {
