--- a/public/styles.css
+++ b/public/styles.css
@@ -100,28 +100,6 @@ body {
     white-space: nowrap;
     flex-shrink: 1;
 }
-.newRoom {
-    display: inline-block;
-    position: relative;
-    left: 0.5%;
-    background-color: #00ffbb;
-    border: none;
-    border-radius: 10px;
-    color: #0f0f0f;
-    padding: 5px 20px;
-    text-align: center;
-    text-decoration: none;
-    font-size: 20px;
-    font-family: sans-serif;
-    font-weight: bold;
-    flex-shrink: 0;
-    cursor: pointer;
-    transition: transform 0.3s ease
-}
-
-.newRoom:hover {
-    transform: scale(1.2);
-}
 
 .account {
     width: 55px;
@@ -134,7 +112,7 @@ body {
 }
 
 .account:hover {
-    transform: scale(1.2);
+    transform: scale(1.1);
 }
 
 .horiztonalSpacer {
@@ -145,6 +123,36 @@ body {
     border: none;
     box-sizing: border-box;
     flex-shrink: 0;
+}
+
+/* Under Top Bar */
+.subTopBar {
+    display: flex;
+    justify-content: space-between;
+}
+
+.newRoom {
+    background-color: #00ffbb;
+    display: inline-block;
+    border: none;
+    border-radius: 10px;
+    color: #0f0f0f;
+    padding: 5px 20px;
+    margin-top: 10px;
+    margin-right: 10px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 20px;
+    font-family: sans-serif;
+    font-weight: bold;
+    flex-shrink: 0;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+    animation: fade-down 0.5s 0.4s backwards;
+}
+
+.newRoom:hover {
+    transform: scale(1.05);
 }
 
 /* Search Section */
@@ -168,7 +176,7 @@ body {
     height: 58px;
     border-radius: 0 15px 15px 0;
     width: 30%;
-    min-width: 150px;
+    min-width: 200px;
     max-width: 600px;
     transition: width 0.3s ease-in-out;
 }
@@ -192,7 +200,7 @@ body {
 }
 
 .dropArrow:hover {
-    transform: scale(1.2);
+    transform: scale(1.1);
 }
 
 .searchIcon {
@@ -205,7 +213,7 @@ body {
 }
 
 .searchIcon:hover {
-    transform: scale(1.2);
+    transform: scale(1.1);
 }
 
 .searchBar {
@@ -244,6 +252,15 @@ body {
     justify-content: center;
     margin-top: 20px;
     animation: fade-up 0.5s 0.4s backwards;
+}
+
+.waiting {
+    color: white;
+    font-size: 30px;
+    font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    transition: opacity 0.5s ease-in-out;
 }
 
 .videoTitle {
