--- a/public/styles.css
+++ b/public/styles.css
@@ -39,6 +39,28 @@ body {
     }
 }
 
+@keyframes fade-left {
+    from {
+        opacity: 0;
+        transform: translateX(50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes fade-right {
+    from {
+        opacity: 0;
+        transform: translateX(-50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
 /* Top Bar */
 .header{
     animation: fade-down 0.5s 0.4s backwards;
@@ -155,6 +177,13 @@ body {
     transform: scale(1.05);
 }
 
+@media (max-width: 767px) {
+    .subTopBar {
+        display: flex;
+        justify-content: center;
+    }
+}
+
 /* Search Section */
 .searchSection {
     display: flex;
@@ -238,6 +267,7 @@ body {
     min-width: 350px;
     margin-left: auto;
     margin-right: auto;
+    animation: fade-up 0.5s 0.4s backwards;
 }
 
 .videoBox {
@@ -251,7 +281,6 @@ body {
     align-items: center;
     justify-content: center;
     margin-top: 10px;
-    animation: fade-up 0.5s 0.4s backwards;
 }
 
 .waiting {
@@ -299,3 +328,104 @@ footer {
     bottom: 0;
     width: 100%;
 }
+
+    
+    
+/* Rooms HTML */
+@media (min-width: 1000px) {
+    .searchSectionRoom {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        margin-top: 25px;
+        margin-left: 31%;
+        margin-right: auto;
+        margin-top: 50px;
+        width: 100%;
+        padding: 0 20px;
+        box-sizing: border-box;
+        animation: fade-left 0.5s 0.4s backwards;
+    }
+
+    .parentContainer {
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
+        gap: 20px;
+        margin: 25px auto;
+        max-width: 2200px;
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+    .videoContainerRoom {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 70%;
+        max-width: 1280px;
+        min-width: 350px;
+        margin: 0;
+        animation: fade-left 0.5s 0.4s backwards;
+    }
+
+    .rightContainer {
+        display: flex;
+        flex-direction: column;
+        width: 30%;
+        max-width: 320px;
+        flex-shrink: 0;
+        margin: 0;
+        margin-top: -10px;
+        height: auto;
+        align-self: stretch;
+        animation: fade-right 0.5s 0.4s backwards;
+    }
+
+    .chatContainer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        width: 100%;
+        height: 100%;
+        max-height: 100%;
+        background-color: white;
+        box-sizing: border-box;
+        overflow-y: auto;
+        padding: 10px;
+        border-radius: 0px 0px 15px 0px;
+    }
+
+    .boxTextBackground {
+        display: flex;
+        align-items: center;
+        background-color: #273648;
+        border-radius: 15px 15px 0px 0;
+        border: 2px solid white;
+        box-sizing: border-box;
+    }
+
+    .boxText {
+        color: white;
+        font-family: sans-serif;
+        font-size: clamp(5, 20, 25);
+        padding-left: 10px;
+    }
+
+    .videoBoxRoom {
+        position: relative;
+        background-color: #212121;
+        color: white;
+        width: 100%;
+        height: 100%;
+        aspect-ratio: 16 / 9;
+        font-family: sans-serif;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 0px;
+    }
+}
+
+
