--- a/public/styles.css
+++ b/public/styles.css
@@ -382,7 +382,7 @@ footer {
         animation: fade-right 0.5s 0.4s backwards;
     }
 
-    .chatContainer {
+    .queueContainer {
         display: flex;
         flex-direction: column;
         align-items: center;
