--- a/public/styles.css
+++ b/public/styles.css
@@ -177,11 +177,33 @@ body {
     transform: scale(1.05);
 }
 
-@media (max-width: 767px) {
+@media (max-width: 768px) {
     .subTopBar {
         display: flex;
         justify-content: center;
     }
+
+    .newRoom {
+        background-color: #00ffbb;
+        display: inline-block;
+        border: none;
+        border-radius: 10px;
+        color: #0f0f0f;
+        padding: 20px 20px;
+        margin-top: 10px;
+        margin-right: auto;
+        margin-left: auto;
+        text-align: center;
+        text-decoration: none;
+        font-size: 20px;
+        font-family: sans-serif;
+        font-weight: bold;
+        flex-shrink: 0;
+        cursor: pointer;
+        transition: transform 0.3s ease;
+        animation: fade-down 0.5s 0.4s backwards;
+    }
+
 }
 
 /* Search Section */
@@ -330,9 +352,8 @@ footer {
 }
 
     
-    
-/* Rooms HTML */
-@media (min-width: 1000px) {
+/* Room CSS PC */
+@media only screen and (min-width: 769px) {
     .searchSectionRoom {
         display: flex;
         align-items: center;
@@ -428,4 +449,89 @@ footer {
     }
 }
 
+/* Room CSS Mobile */
+@media only screen and (max-width: 768px) {
+    .searchSectionRoom {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 25px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%;
+        padding: 0 20px;
+        box-sizing: border-box;
+        animation: fade-down 0.5s 0.4s backwards;
+    }
 
+    .parentContainer {
+    }
+
+    .videoContainerRoom {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 70%;
+        max-width: 1280px;
+        min-width: 350px;
+        margin-top: 25px;
+        margin-left: auto;
+        margin-right: auto;
+        animation: fade-up 0.5s 0.4s backwards;
+    }
+
+    .rightContainer {
+        display: flex;
+        flex-direction: column;
+        width: 70%;
+        max-width: 300px;
+        flex-shrink: 0;
+        height: auto;
+        margin-top: 15px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 80px;
+        animation: fade-up 0.5s 0.4s backwards;
+    }
+
+    .queueContainer {
+        justify-content: center;
+        width: 100%;
+        height: 300px;
+        max-height: 100%;
+        background-color: white;
+        box-sizing: border-box;
+        overflow-y: auto;
+        padding: 10px;
+        border-radius: 0px 0px 15px 15px;
+    }
+
+    .boxTextBackground {
+        display: flex;
+        justify-content: center;
+        background-color: #273648;
+        border-radius: 15px 15px 0px 0;
+        border: 2px solid white;
+        box-sizing: border-box;
+    }
+
+    .boxText {
+        color: white;
+        font-family: sans-serif;
+        font-size: clamp(5, 20, 25);
+    }
+
+    .videoBoxRoom {
+        position: relative;
+        background-color: #212121;
+        color: white;
+        width: 100%;
+        height: 100%;
+        aspect-ratio: 16 / 9;
+        font-family: sans-serif;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 0px;
+    }
+}
