--- a/public/styles.css
+++ b/public/styles.css
@@ -534,6 +534,7 @@ footer {
         justify-content: flex-start;
         width: 100%;
         max-height: 300px;
+        min-height: 200px;
         background-color: white;
         box-sizing: border-box;
         overflow-y: auto;
