--- a/public/styles.css
+++ b/public/styles.css
@@ -189,7 +189,7 @@ body {
         border: none;
         border-radius: 10px;
         color: #0f0f0f;
-        padding: 20px 20px;
+        padding: 17.5px 17.5px;
         margin-top: 10px;
         margin-right: auto;
         margin-left: auto;
@@ -285,7 +285,7 @@ body {
     flex-direction: column;
     align-items: center;
     width: 70%;
-    max-width: 1280px;
+    max-width: 1150px;
     min-width: 350px;
     margin-left: auto;
     margin-right: auto;
@@ -351,17 +351,16 @@ footer {
     width: 100%;
 }
 
-
 /* Room CSS PC */
 @media only screen and (min-width: 769px) {
     .searchSectionRoom {
         display: flex;
         align-items: center;
-        justify-content: flex-start;
+        justify-content: center;
         margin-top: 25px;
-        margin-left: 31%;
+        margin-left: auto;
         margin-right: auto;
-        margin-top: 50px;
+        margin-top: 25px;
         width: 100%;
         padding: 0 20px;
         box-sizing: border-box;
@@ -370,12 +369,12 @@ footer {
 
     .parentContainer {
         display: flex;
-        align-items: flex-start;
         justify-content: center;
+        align-items: stretch;
         gap: 20px;
-        margin: 25px auto;
+        margin: 10px auto;
         max-width: 2200px;
-        width: 100%;
+        max-height: 100vh;
         box-sizing: border-box;
     }
 
@@ -383,37 +382,40 @@ footer {
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: center;
         width: 70%;
-        max-width: 1280px;
+        height: 100%;
+        max-width: 1100px;
         min-width: 350px;
         margin: 0;
         animation: fade-left 0.5s 0.4s backwards;
     }
 
     .rightContainer {
-        display: flex;
-        flex-direction: column;
         width: 30%;
         max-width: 320px;
+        max-height: 650px;
         flex-shrink: 0;
         margin: 0;
-        margin-top: -10px;
-        height: auto;
-        align-self: stretch;
         animation: fade-right 0.5s 0.4s backwards;
+        overflow: hidden;
+        flex-shrink: 0;
     }
     
     .queueContainer {
+        flex-grow: 0;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: flex-start;
         width: 100%;
-        max-height: 675px;
+        height: 90%;
+        max-height: 90%;
         min-height: 90%;
-        background-color: white;
+        background-color: #212121;
         box-sizing: border-box;
         overflow-y: auto;
+        overflow-x: hidden;
         padding: 10px;
         border-radius: 0px 0px 15px 0px;
     }
@@ -445,7 +447,7 @@ footer {
         display: flex;
         align-items: center;
         justify-content: center;
-        margin-top: 0px;
+        margin-top: 1%;
     }
 }
 
@@ -498,6 +500,7 @@ footer {
     }
 
     .parentContainer {
+
     }
 
     .videoContainerRoom {
@@ -505,7 +508,7 @@ footer {
         flex-direction: column;
         align-items: center;
         width: 70%;
-        max-width: 1280px;
+        max-width: 1100px;
         min-width: 350px;
         margin-top: 25px;
         margin-left: auto;
