--- a/public/styles.css
+++ b/public/styles.css
@@ -148,29 +148,14 @@ body {
 }
 
 /* Under Top Bar */
+
 .subTopBar {
-    display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
 }
 
 .newRoom {
-    background-color: #00ffbb;
-    display: inline-block;
-    border: none;
-    border-radius: 10px;
-    color: #0f0f0f;
-    padding: 5px 20px;
-    margin-top: 10px;
-    margin-right: 10px;
-    text-align: center;
-    text-decoration: none;
-    font-size: 20px;
-    font-family: sans-serif;
-    font-weight: bold;
-    flex-shrink: 0;
-    cursor: pointer;
-    transition: transform 0.3s ease;
-    animation: fade-down 0.5s 0.4s backwards;
+    padding: 50px 50px;
 }
 
 .newRoom:hover {
@@ -225,7 +210,7 @@ body {
     align-items: center;
     background-color: white;
     height: 58px;
-    border-radius: 0 15px 15px 0;
+    border-radius: 15px 15px 15px 15px;
     width: 30%;
     min-width: 200px;
     max-width: 600px;
