--- a/public/styles.css
+++ b/public/styles.css
@@ -320,11 +320,44 @@ body {
     margin-top: 10px;
 }
 
+.controls {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+    margin-top: -10px;
+}
+
+.play{
+    background: url('images/play.png') no-repeat center center;
+    background-size: contain;
+    width: 48px;
+    height: 48px;
+    border: none;
+}
+
+.seekBar {
+    width: 90%;
+}
+
+.fullscreen{
+    background: url('images/fullscreen.png') no-repeat center center;
+    background-size: contain;
+    width: 40px;
+    height: 40px;
+    border: none;
+    transition: transform 0.3s ease;
+}
+
+.fullscreen:hover {
+    transform: scale(1.05);
+}
+
 .videoTitleText {
     color: white;
     margin: 0;
     padding-left: 0%;
-
+    margin-top: 5px;
     font-family: sans-serif;
     font-size: 23px;
     font-style: italic;
