--- a/public/styles.css
+++ b/public/styles.css
@@ -226,9 +226,9 @@ body {
     background-color: white;
     height: 58px;
     border-radius: 0 15px 15px 0;
-    width: 30%;
-    min-width: 200px;
-    max-width: 600px;
+    width: 50%;
+    min-width: 25%;
+    max-width: 500px;
     transition: width 0.3s ease-in-out;
 }
 
@@ -285,8 +285,8 @@ body {
     flex-direction: column;
     align-items: center;
     width: 70%;
-    max-width: 1150px;
-    min-width: 350px;
+    max-width: 55%;
+    min-width: 50%;
     margin-left: auto;
     margin-right: auto;
     animation: fade-up 0.5s 0.4s backwards;
@@ -337,14 +337,43 @@ body {
     border: none;
 }
 
+.time {
+    text-align: center;
+    height: 100%;
+    padding: 0px;
+    background-color: transparent;
+    color: white;
+    font-size: 1.5ch;
+}
+
 .seekBar {
     width: 90%;
-    min-width: 40%;
 }
 
 .volume {
-    width: 15%;
-    min-width: 50px;
+    background: url('images/mute.png') no-repeat center center;
+    background-size: contain;
+    margin-top: 2px;
+    padding: 0px;
+    width: 40px;
+    height: 40px;
+    border: none;
+    transition: transform 0.3s ease;
+}
+
+.volumeM {
+    position: absolute;
+    top: -80px;
+    right: 0px;
+    z-index: 1000;
+    display: none;
+}
+
+.volumeR {
+    width: 100%;
+    max-height: 25%;
+    transform: rotate(-90deg);
+    border-radius: 5px;
 }
 
 .settings {
@@ -358,10 +387,10 @@ body {
 
 .settingsM {
     position: absolute;
-    top: -118px;
+    top: -65px;
     right: 0px;
     background-color: #0f0f0f;
-    padding: 10px;
+    padding-bottom: 5px;
     z-index: 1000;
     display: none;
 }
@@ -369,18 +398,28 @@ body {
 .settingsO {
     display: block;
     width: 100%;
-    padding: 10px;
+    padding: 8px;
     margin-bottom: 2px;
     background-color: #0f0f0f;
     color: #f0f0f0;
     border: none;
     text-align: left;
     cursor: pointer;
-    font-size: x-large;
+    font-size: 1.5ch;
 }
 
 .settingsO:hover {
     background-color: #474747;
+}
+
+.qualityM {
+    position: absolute;
+    top: -85px;
+    right: -46px;
+    background-color: #0f0f0f;
+    padding-bottom: 5px;
+    z-index: 1000;
+    display: none;
 }
 
 .fullscreen{
@@ -395,7 +434,8 @@ body {
     color: white;
     margin: 0;
     padding-left: 0%;
-    margin-top: 5px;
+    padding-bottom: 10px;
+    margin-top: 2px;
     font-family: sans-serif;
     font-size: 23px;
     font-style: italic;
